--- a/examples/web/e-commerce/src/App.css
+++ b/examples/web/e-commerce/src/App.css
@@ -228,6 +228,7 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   min-height: 2.5rem;
 }
